# some-utils

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
scripts/pdf/: imgs2pdf.py  pdf-concat.py  pdf-rotate.py  pdf-scale.py  pdf-search.py  pdf-subset.py
some_utils/: __init__.py  argparse.py  caching.py  config.py  secrets.py  system.py  test_utils.py  text.py  threads.py
