[project]
name = "some-utils"
version = "0.0.1"
authors = [{ name = "Teshan Liyanage", email = "teshanuka@gmail.com" }]
description = "Some useful utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "PyYAML>=5.3.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
