[project]
name = "some-utils"
version = "0.0.2"
authors = [{ name = "Teshan Liyanage", email = "teshanuka@gmail.com" }]
description = "Some useful utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "PyYAML>=5.3.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# example from https://github.com/python-semantic-release/python-semantic-release/blob/master/pyproject.toml
[tool.semantic_release]
version_variables = ["some_utils/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''build(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''Merged? .*''',
  '''Initial Commit.*''',
  # Old semantic-release version commits
  '''^\d+\.\d+\.\d+''',
]
